Don't eat mouse press events on Linux

Since we explicitly accept all the tablet press events, Linux
is guaranteed not to generate any synthesized mouse presses for
them. Therefore, we shouldn't eat them.

On Windows, the events are synthesized by the OS, so we need
to eat them still.

BUG:407595